[package]
name = "db"
version = "0.1.0"
edition = "2021"
authors = [
    "Cloudiful"
]
repository = "https://cloudiful.cn:59443/crates/db"

[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tokio = {version = "1.40.0", features = ["full"]}
chrono = "0.4.38"
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"]}
